--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "react-native-use-modal-hooks",
   "description": "React hooks for displaying a modal window in React Native",
-  "version": "1.1.0",
+  "version": "1.2.0",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "license": "MIT",
@@ -39,6 +39,9 @@
     "ts-jest": "^26.1.4",
     "typescript": "^3.9.7"
   },
+  "files": [
+    "dist"
+  ],
   "jest": {
     "preset": "ts-jest"
   }
